// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches the snapshot 1 1`] = `
<a
  className="pricing__container-card"
  href="/sign-up"
  onClick={[Function]}
>
  <div
    className="pricing__container-cardInfo"
  >
    <div
      className="icon"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 384 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M216 23.86c0-23.8-30.65-32.77-44.15-13.04C48 191.85 224 200 224 288c0 35.63-29.11 64.46-64.85 63.99-35.17-.45-63.15-29.77-63.15-64.94v-85.51c0-21.7-26.47-32.23-41.43-16.5C27.8 213.16 0 261.33 0 320c0 105.87 86.13 192 192 192s192-86.13 192-192c0-170.29-168-193-168-296.14z"
        />
      </svg>
    </div>
    <h3>
       
      Starter
       
    </h3>
    <h4>
       
      $8.99
       
    </h4>
    <p>
       
      per month
       
    </p>
    <ul
      className="pricing__container-features"
    >
      <li>
        100 Transactions
      </li>
      <li>
        2% Cash Back
      </li>
      <li>
        $10,000 Limit
      </li>
    </ul>
    <button
      className="btn 
			btn--primary
			btn--wide
			primary"
    >
      Choose Plan
    </button>
  </div>
</a>
`;

exports[`Matches the snapshot 2 1`] = `
<a
  className="pricing__container-card"
  href="/sign-up"
  onClick={[Function]}
>
  <div
    className="pricing__container-cardInfo"
  >
    <div
      className="icon"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 384 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M216 23.86c0-23.8-30.65-32.77-44.15-13.04C48 191.85 224 200 224 288c0 35.63-29.11 64.46-64.85 63.99-35.17-.45-63.15-29.77-63.15-64.94v-85.51c0-21.7-26.47-32.23-41.43-16.5C27.8 213.16 0 261.33 0 320c0 105.87 86.13 192 192 192s192-86.13 192-192c0-170.29-168-193-168-296.14z"
        />
      </svg>
    </div>
    <h3>
       
      Gold
       
    </h3>
    <h4>
       
      $29.99
       
    </h4>
    <p>
       
      per month
       
    </p>
    <ul
      className="pricing__container-features"
    >
      <li>
        1000 Transactions
      </li>
      <li>
        3.5% Cash Back
      </li>
      <li>
        $100,000 Limit
      </li>
    </ul>
    <button
      className="btn 
			btn--primary
			btn--wide
			primary"
    >
      Choose Plan
    </button>
  </div>
</a>
`;

exports[`Matches the snapshot 3 1`] = `
<a
  className="pricing__container-card"
  href="/sign-up"
  onClick={[Function]}
>
  <div
    className="pricing__container-cardInfo"
  >
    <div
      className="icon"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 384 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M216 23.86c0-23.8-30.65-32.77-44.15-13.04C48 191.85 224 200 224 288c0 35.63-29.11 64.46-64.85 63.99-35.17-.45-63.15-29.77-63.15-64.94v-85.51c0-21.7-26.47-32.23-41.43-16.5C27.8 213.16 0 261.33 0 320c0 105.87 86.13 192 192 192s192-86.13 192-192c0-170.29-168-193-168-296.14z"
        />
      </svg>
    </div>
    <h3>
       
      Diamond
       
    </h3>
    <h4>
       
      $99.99
       
    </h4>
    <p>
       
      per month
       
    </p>
    <ul
      className="pricing__container-features"
    >
      <li>
        Unlimited Transactions
      </li>
      <li>
        5% Cash Back
      </li>
      <li>
        Unlimited Spending
      </li>
    </ul>
    <button
      className="btn 
			btn--primary
			btn--wide
			primary"
    >
      Choose Plan
    </button>
  </div>
</a>
`;
